// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props href 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned euiCard--isClickable css-1pe7jko-euiPanel-grow-m-l-plain-hasShadow-isClickable"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      <a
        aria-describedby="generated-idDescription"
        class="euiCard__titleAnchor"
        href="#"
        rel="noreferrer"
      >
        Card title
      </a>
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props recommended 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned euiCard--hasBetaBadge css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <span
    class="euiCard__betaBadgeWrapper"
  >
    <span
      class="euiBetaBadge euiBetaBadge--hollow euiCard__betaBadge"
      id="generated-idBetaBadge"
      title="Recommended"
    >
      Recommended
    </span>
  </span>
</div>
`;

exports[`NoDataCard renders 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
</div>
`;
